--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^5.0.1"
+        "react-scripts": "^5.0.1",
+        "typescript": "^5.2.2"
     },
     "scripts": {
         "start": "react-scripts start",
