--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,11 +4,12 @@
     "private": true,
     "dependencies": {
         "@types/react-dom": "^18.2.7",
+        "@types/react-transition-group": "^4.4.6",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^5.0.1",
-        "typescript": "^5.2.2"
+        "react-transition-group": "^4.4.5"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -33,6 +34,7 @@
     },
     "devDependencies": {
         "@types/react": "^18.2.21",
-        "@types/react-router-dom": "^5.3.3"
+        "@types/react-router-dom": "^5.3.3",
+        "typescript": "^4.9.5"
     }
 }
