--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
         ]
     },
     "devDependencies": {
+        "@types/google.maps": "^3.54.1",
         "@types/react": "^18.2.21",
         "@types/react-router-dom": "^5.3.3",
         "typescript": "^4.9.5"
