--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.4",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   }
 }
