--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,14 +12,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/mongoose-unique-validator": "^1.0.7",
     "@types/node": "^20.8.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/uuid": "^9.0.4",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
+    "mongoose-unique-validator": "^4.0.0",
     "uuid": "^9.0.1"
   }
 }
