Connected the Backend to the Frontend of the Loggin, Signin, GET users, POST place, UPDATE place, GET Place by userId, UPDATE place, DELETING place.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@types/react-dom": "^18.2.7",
         "@types/react-transition-group": "^4.4.6",
+        "axios": "^1.5.1",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-router-dom": "^5.1.2",
