--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/mongoose-unique-validator": "^1.0.7",
     "@types/node": "^20.8.0",
@@ -21,6 +22,7 @@
     "@types/uuid": "^9.0.4",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongodb": "^6.1.0",
