--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,23 +11,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/mongoose-unique-validator": "^1.0.7",
     "@types/node": "^20.8.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/multer": "^1.4.9",
     "@types/uuid": "^9.0.4",
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
   }
 }
