--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_GOOGLE_API_KEY = "AIzaSyB-X9ZS86H8NwzLk3h7PQzGQiwMH35oP3g"
+REACT_APP_GOOGLE_API_KEY = "Your Google KEY"
 REACT_APP_BACKEND_URL = "http://localhost:5001/api"
 REACT_APP_ASSET_URL = "http://localhost:5001"
